--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=IXICUTE;Database=SchoolDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True;"
-  }
+  "AllowedHosts": "*"
 }
